Marcando movimiento de los peones

--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Tablero de Ajedrez </title>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <h1><center><big>Ajedrez</big></center></h1>
     <h2 class="boton">Jugar</h2>
     <div class="tablero">
-        <!--Fila 1 | Negras-->
+        <!--Fila 8 | Negras-->
         <div class="filas">
             <div class="columna"> <span>&#9820;</span> </div>
             <div class="columna black"> <span>&#9822;</span> </div>
@@ -22,7 +22,7 @@
             <div class="columna black"> <span>&#9820;</span> </div>
         </div>
 
-        <!--Fila 2 | Negras-->
+        <!--Fila 7 | Negras-->
         <div class="filas">
             <div class="columna peon-black-1 black"> <span>&#9823;</span> </div>
             <div class="columna peon-black-2 "> <span>&#9823;</span> </div>
@@ -34,55 +34,55 @@
             <div class="columna peon-black-8"> <span>&#9823;</span> </div>
         </div>
 
-        <!--Fila 3-->
+        <!--Fila 6-->
         <div class="filas">
-            <div class="columna"></div>
-            <div class="columna black"></div>
-            <div class="columna"></div>
-            <div class="columna black"></div>
-            <div class="columna"></div>
-            <div class="columna black"></div>
-            <div class="columna"></div>
-            <div class="columna black"></div>
-        </div>
-
-        <!--Fila 4-->
-        <div class="filas">
-            <div class="columna black"></div>
-            <div class="columna "></div>
-            <div class="columna black"></div>
-            <div class="columna "></div>
-            <div class="columna black"></div>
-            <div class="columna "></div>
-            <div class="columna black"></div>
-            <div class="columna"></div>
+            <div class="columna a6"></div>
+            <div class="columna b6 black"></div>
+            <div class="columna c6"></div>
+            <div class="columna d6 black"></div>
+            <div class="columna e6"></div>
+            <div class="columna f6 black"></div>
+            <div class="columna g6"></div>
+            <div class="columna h6 black"></div>
         </div>
 
         <!--Fila 5-->
         <div class="filas">
-            <div class="columna"></div>
-            <div class="columna black"></div>
-            <div class="columna"></div>
-            <div class="columna black"></div>
-            <div class="columna"></div>
-            <div class="columna black"></div>
-            <div class="columna"></div>
-            <div class="columna black"></div>
+            <div class="columna a5 black"></div>
+            <div class="columna b5 "></div>
+            <div class="columna c5 black"></div>
+            <div class="columna d5 "></div>
+            <div class="columna e5 black"></div>
+            <div class="columna f5 "></div>
+            <div class="columna g5 black"></div>
+            <div class="columna h5"></div>
         </div>
 
-        <!--Fila 6-->
+        <!--Fila 4-->
         <div class="filas">
-            <div class="columna black"></div>
-            <div class="columna "></div>
-            <div class="columna black"></div>
-            <div class="columna "></div>
-            <div class="columna black"></div>
-            <div class="columna "></div>
-            <div class="columna black"></div>
-            <div class="columna"></div>
+            <div class="columna a4"></div>
+            <div class="columna b4 black"></div>
+            <div class="columna c4"></div>
+            <div class="columna d4 black"></div>
+            <div class="columna e4"></div>
+            <div class="columna f4 black"></div>
+            <div class="columna g4"></div>
+            <div class="columna h4 black"></div>
         </div>
 
-        <!--Fila 7 | Negras-->
+        <!--Fila 3-->
+        <div class="filas">
+            <div class="columna 3a black"></div>
+            <div class="columna 3b "></div>
+            <div class="columna 3c black"></div>
+            <div class="columna 3d "></div>
+            <div class="columna 3e black"></div>
+            <div class="columna 3f "></div>
+            <div class="columna 3g black"></div>
+            <div class="columna 3h"></div>
+        </div>
+
+        <!--Fila 2 | Negras-->
         <div class="filas">
             <div class="columna peon-white-1"> <span>&#9817;</span> </div>
             <div class="columna peon-white-2 black"> <span>&#9817;</span> </div>
@@ -94,7 +94,7 @@
             <div class="columna peon-white-8 black"> <span>&#9817;</span> </div>
         </div>
 
-        <!--Fila 8 | Negras--> 
+        <!--Fila 1 | Negras--> 
         <div class="filas">
             <div class="columna black"> <span>&#9814;</span> </div>
             <div class="columna "> <span>&#9816;</span> </div>
@@ -107,6 +107,6 @@
         </div>
     </div>
 
-    <script src="js/script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
