--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@
 </head>
 <body>
     <h1><center><big>Ajedrez</big></center></h1>
-    <h2 class="boton">Jugar</h2>
+    <h2 class="boton" id="jugar">Jugar</h2>
     <div class="tablero">
         <!--Fila 8 | Negras-->
         <div class="filas">
             <div class="columna"> <span>&#9820;</span> </div>
-            <div class="columna black"> <span>&#9822;</span> </div>
+            <div class="columna caballo-black-1 black"> <span>&#9822;</span> </div>
             <div class="columna"> <span>&#9821;</span> </div>
             <div class="columna black"> <span>&#9819;</span> </div>
             <div class="columna"> <span>&#9818;</span> </div>
             <div class="columna black"> <span>&#9821;</span> </div>
-            <div class="columna"> <span>&#9822;</span> </div>
+            <div class="columna caballo-black-2"> <span>&#9822;</span> </div>
             <div class="columna black"> <span>&#9820;</span> </div>
         </div>
 
@@ -72,14 +72,14 @@
 
         <!--Fila 3-->
         <div class="filas">
-            <div class="columna 3a black"></div>
-            <div class="columna 3b "></div>
-            <div class="columna 3c black"></div>
-            <div class="columna 3d "></div>
-            <div class="columna 3e black"></div>
-            <div class="columna 3f "></div>
-            <div class="columna 3g black"></div>
-            <div class="columna 3h"></div>
+            <div class="columna a3 black"></div>
+            <div class="columna b3 "></div>
+            <div class="columna c3 black"></div>
+            <div class="columna d3 "></div>
+            <div class="columna e3 black"></div>
+            <div class="columna f3 "></div>
+            <div class="columna g3 black"></div>
+            <div class="columna h3"></div>
         </div>
 
         <!--Fila 2 | Negras-->
@@ -97,12 +97,12 @@
         <!--Fila 1 | Negras--> 
         <div class="filas">
             <div class="columna black"> <span>&#9814;</span> </div>
-            <div class="columna "> <span>&#9816;</span> </div>
+            <div class="columna caballo-white-1"> <span>&#9816;</span> </div>
             <div class="columna black"> <span>&#9815;</span> </div>
             <div class="columna "> <span>&#9813;</span> </div>
             <div class="columna black"> <span>&#9812;</span> </div>
             <div class="columna "> <span>&#9815;</span> </div>
-            <div class="columna black"> <span>&#9816;</span> </div>
+            <div class="columna caballo-white-2 black"> <span>&#9816;</span> </div>
             <div class="columna"> <span>&#9814;</span> </div>
         </div>
     </div>
